--- a/app/src/main/res/navigation/twitch_nav_graph.xml
+++ b/app/src/main/res/navigation/twitch_nav_graph.xml
@@ -7,19 +7,19 @@
 
     <custom_fragment
         android:id="@+id/game"
-        android:name="com.example.twitchapp.ui.fragment.ClipFragment"
+        android:name="com.example.twitchapp.ui.fragments.ClipFragment"
         android:label="fragment_game"
         tools:layout="@layout/fragment_clip" />
 
     <custom_fragment
         android:id="@+id/stream"
-        android:name="com.example.twitchapp.ui.fragment.StreamFragment"
+        android:name="com.example.twitchapp.ui.fragments.StreamFragment"
         android:label="fragment_stream"
         tools:layout="@layout/fragment_stream" />
 
     <custom_fragment
         android:id="@+id/favorite"
-        android:name="com.example.twitchapp.ui.fragment.FavoriteFragment"
+        android:name="com.example.twitchapp.ui.fragments.FavoriteFragment"
         android:label="fragment_favorite"
         tools:layout="@layout/fragment_favorite" />
 
