--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -27,7 +27,7 @@
             android:layout_marginTop="8dp"
             android:text="@string/profile_title"
             android:textColor="@color/white"
-            android:textSize="30sp"
+            android:textSize="26sp"
             android:textStyle="italic"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -41,18 +41,8 @@
             android:contentDescription="@string/image_desc"
             android:src="@drawable/avatar"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/my_name"
+            app:layout_constraintRight_toLeftOf="@id/num_likes"
             app:layout_constraintTop_toBottomOf="@+id/profile_title" />
-
-        <ImageView
-            android:id="@+id/edit_avater"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="8dp"
-            android:contentDescription="@string/image_desc"
-            android:src="@drawable/ic_change_avatar"
-            app:layout_constraintBottom_toBottomOf="@+id/avatar_img"
-            app:layout_constraintRight_toRightOf="@+id/avatar_img" />
 
         <TextView
             android:id="@+id/my_name"
@@ -86,7 +76,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/avatar_img"
             app:layout_constraintBottom_toBottomOf="@+id/avatar_img"
-            app:layout_constraintLeft_toRightOf="@+id/my_name"
+            app:layout_constraintLeft_toRightOf="@+id/num_likes"
             />
 
         <View
