--- a/app/src/main/res/layout/edit_profile_dialog.xml
+++ b/app/src/main/res/layout/edit_profile_dialog.xml
@@ -23,6 +23,7 @@
         android:layout_height="70dp"
         android:layout_marginTop="12dp"
         android:src="@drawable/avatar"
+        android:contentDescription="@string/image_desc"
         app:layout_constraintBottom_toTopOf="@+id/edit_my_name"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -41,6 +42,7 @@
         android:id="@+id/edit_my_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColorHint="@color/white"
         android:ems="10"
         app:layout_constraintBottom_toTopOf="@+id/edit_line"
         app:layout_constraintLeft_toLeftOf="parent"
