--- a/app/src/main/res/layout/edit_profile_dialog.xml
+++ b/app/src/main/res/layout/edit_profile_dialog.xml
@@ -22,10 +22,10 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginTop="12dp"
-        android:src="@drawable/avatar"
         android:contentDescription="@string/image_desc"
         app:layout_constraintBottom_toTopOf="@+id/edit_my_name"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:src="@drawable/ic_profile"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialog_title" />
 
