--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -39,7 +39,7 @@
             android:layout_height="58dp"
             android:layout_marginTop="8dp"
             android:contentDescription="@string/image_desc"
-            android:src="@drawable/avatar"
+            android:src="@drawable/ic_profile"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/num_likes"
             app:layout_constraintTop_toBottomOf="@+id/profile_title" />
@@ -69,15 +69,14 @@
             app:layout_constraintTop_toBottomOf="@+id/my_name" />
 
         <Button
+            android:id="@+id/btn_edit"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:text="edit"
-            android:id="@+id/btn_edit"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/avatar_img"
             app:layout_constraintBottom_toBottomOf="@+id/avatar_img"
             app:layout_constraintLeft_toRightOf="@+id/num_likes"
-            />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/avatar_img" />
 
         <View
             android:id="@+id/medium_line"
@@ -123,7 +122,7 @@
 
         <ProgressBar
             android:id="@+id/progressbar"
-            style="?attr/progressBarStyle"
+            style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
