--- a/app/src/main/res/layout/edit_profile_dialog.xml
+++ b/app/src/main/res/layout/edit_profile_dialog.xml
@@ -40,7 +40,7 @@
 
     <EditText
         android:id="@+id/edit_my_name"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColorHint="@color/white"
         android:ems="10"
