--- a/app/src/main/res/layout/favorite_item.xml
+++ b/app/src/main/res/layout/favorite_item.xml
@@ -22,7 +22,7 @@
 
             <ImageView
                 android:layout_width="25dp"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:contentDescription="@string/image_desc"
                 android:src="@drawable/ic_delete"
                 app:layout_constraintBottom_toBottomOf="parent"
